--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Felpudos-Adventure.sln"
+    "dotnet.defaultSolution": "Felpudos-Adventure-PJ.sln"
 }
